--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/KenHky/react-native-modal-date-picker"
   },
   "files": [
-    "index"
+    "index",
+    "style"
   ],
   "dependencies": {
     "react-native-picker-android": "~1.0.2",
