--- a/demo/android/settings.gradle
+++ b/demo/android/settings.gradle
@@ -1,4 +1,3 @@
-rootProject.name = 'AwesomeProject'
-include ':ExtraDimensions', ':app'
-project(':ExtraDimensions').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-extra-dimensions-android/android')
+rootProject.name = 'rndemo'
 
+include ':app'
